# coldstar

./: .gitignore  ARCHITECTURE.md  DELIVERABLES.md  Dockerfile  FIRST_BOOT_IMPLEMENTATION.md  FIRST_BOOT_PROCESS.md  FIRST_BOOT_QUICKSTART.md  INSTALL.md  INTEGRATION_GUIDE.md  INTEGRATION_STATUS.md  LICENSE  Makefile  PROJECT_COMPLETE.md  README.md  RUST_INTEGRATION_COMPLETE.md  SECURE_SIGNER_README.md  SECURITY.md  ZK_README.md  build.py  build_rust_signer.ps1  coldstar_cli.py  config.py  flash_usb.py  install.ps1  install.sh  local_requirements.txt  main.py  problems.md  pyproject.toml  python_signer_example.py  quickstart.ps1  quickstart.sh  replit.md  test_confidential_transfer.py  tui_demo.py  tui_wallet.py  ui_demo.py  upgrade_wallet.py  whitepaper.md
coldstar_zk/: Cargo.toml
coldstar_zk/src/: binding.rs  commitment.rs  domain.rs  envelope.rs  error.rs  ffi.rs  lib.rs  policy.rs  transcript.rs  types.rs
coldstar_zk/src/proofs/: mod.rs  ownership.rs  policy.rs  range.rs
documentation/: SECURITY_CONTROLS.md  ZK_ARCHITECTURE.md
secure_signer/: Cargo.toml  README.md  python_integration.py
secure_signer/include/: signer.h
secure_signer/src/: crypto.rs  error.rs  ffi.rs  lib.rs  main.rs  secure_buffer.rs  zk_ffi.rs  zk_proofs.rs
src/: __init__.py  iso_builder.py  license_check.py  network.py  secure_memory.py  security_validation.py  token_fetcher.py  token_logos.py  transaction.py  tui_app.py  ui.py  usb.py  wallet.py  zk_engine.py
src/privacy/: __init__.py  confidential_transfer.py  mode.py  policy.py  validator.py
src/zk/: __init__.py  engine.py  types.py
tests/: __init__.py  test_policy.py  test_roundtrip.py  test_transaction_mode.py  test_zk_audit.py  test_zk_proofs.py  test_zk_types.py
