[package]
name = "coldstar_zk"
version = "0.1.0"
edition = "2021"
description = "Zero-knowledge proof engine for Coldstar.dev cold wallet"
license = "MIT"
authors = ["ColdStar Development Team"]

[lib]
name = "coldstar_zk"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Elliptic curve operations (Ristretto group on Curve25519)
curve25519-dalek = { version = "4", features = ["serde", "rand_core", "digest"] }

# Ed25519 signing (Solana-compatible)
ed25519-dalek = { version = "2.1", features = ["rand_core", "zeroize"] }

# Hashing
sha2 = "0.10"

# Secure random number generation
rand = "0.8"
rand_core = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.21"
bs58 = "0.5"

# Secure memory
zeroize = { version = "1.7", features = ["derive"] }

# Error handling
thiserror = "1.0"

# HMAC for envelope integrity
hmac = "0.12"

# Timestamp
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["ffi"]
ffi = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
