[package]
name = "solana_secure_signer"
version = "1.0.0"
edition = "2021"
description = "Secure signing core for Solana transactions with memory-locked key handling"
license = "MIT"
authors = ["ColdStar Development Team"]

[lib]
name = "solana_secure_signer"
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "solana-signer"
path = "src/main.rs"

[dependencies]
# Ed25519 signing (Solana-compatible)
ed25519-dalek = { version = "2.1", features = ["rand_core", "zeroize"] }

# Secure memory handling
zeroize = { version = "1.7", features = ["derive"] }
memsec = "0.7"

# Key derivation (Argon2id)
argon2 = "0.5"

# Symmetric encryption (AES-256-GCM)
aes-gcm = "0.10"

# Secure random number generation
rand = "0.8"
rand_core = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.21"
bs58 = "0.5"

# Error handling
thiserror = "1.0"

# CLI support
clap = { version = "4.4", features = ["derive", "env"] }

# Hex encoding
hex = "0.4"

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["ffi"]
ffi = []
subprocess = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
